fixing leftcol overlap on small articles

--- a/common/app/assets/stylesheets/module/_content.scss
+++ b/common/app/assets/stylesheets/module/_content.scss
@@ -3,6 +3,12 @@
         margin-bottom: $gs-baseline*3.5
     ));
     @include fs-bodyCopy(3);
+
+    &:after { // clearfix
+        content: '';
+        display: block;
+        clear: both;
+    }
 }
 
 .content__main-column {
@@ -376,6 +382,11 @@
             margin-left: (gs-span(3) + $gs-gutter)*-1,
             width: gs-span(3)
         ));
+    }
+
+    &.content__meta-container--float {
+        float: left;
+        position: static;
     }
 }
 
